# rpc-auth-server

./: .gitignore  Cargo.toml  build.rs  settings.toml  test.json
.github/workflows/: rust.yml
certs/: priv.key  pub.pem
proto/: auth.proto  authuser.proto  userops.proto
src/: authuser.rs  constants.rs  db.rs  main.rs  routes.rs
src/authentication/: obj.rs
src/objects/: obj_trait.rs
src/operations/: db_insertion.rs  file_upload.rs  init.rs  mod.rs
src/validations/: errors.rs  fields.rs  headers.rs  mod.rs  objects.rs
