[package]
name = "grpc_auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

async-stream = "0.3.2"
once_cell = "1.13.0"
config = "0.13.1"
rand = "0.8"
futures = { version = "0.3", default-features = false, features = ["alloc"] }

tracing = "0.1.29"	
tracing-subscriber = { version = "0.3", features = ["tracing"] }

aws-sdk-dynamodb = "0.17.0"
aws-types = {version= "0.47.0", features= ["hardcoded-credentials"]}
aws-config = "0.47.0"
aws-sdk-s3 = "0.17.0"

prost = "0.11.0"
prost-types = "0.11.1"

tonic = { version = "0.8.0", features = ["tls", "gzip","default"] }
tonic-web = "0.4.0"

tokio = { version = "1.0", features = [ "rt-multi-thread", "time", "fs", "macros", "net",] }
tokio-stream = { version = "0.1", features = ["net"] }

tower = { version = "0.4.13" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11.7"

bincode = "1.3.3"
# prost-types = ""

http = "0.2"
http-body = "0.4.2"
hyper = { version = "0.14", features = ["full"] }
h2 = "0.3"

# rand = "0.8.5"
lazy_static = "1.4.0"
regex = "1.6.0"
bytes = "1.2.1"
uuid = "1.1.2"
thiserror = "1.0.32"

image = "0.24.3"
# hyper-rustls = { version = "0.23", features = ["http2"] }
# tower-http = { version = "0.3", features = ["add-extension", "util"] }

tramp = "0.3.0"

[build-dependencies]
tonic-build = { version = "0.8.0", features = ["prost"] }


[[bin]]
name = "client"
path = "./client/client.rs"

[[bin]]
name = "server"
path = "./src/main.rs"

[[bin]]
name = "image"
path = "./client/image.rs"

[[bin]]
name = "header"
path = "./client/header_test.rs"
